src/ro/pub/cpl/coolir/CoolIrParser.java
// $ANTLR 3.1.1 src/ro/pub/cpl/coolir/CoolIr.g 2012-01-10 13:36:09

    package ro.pub.cpl.coolir;
    import java.util.List;
    import java.util.ArrayList;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

public class CoolIrParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "CALL", "LOAD", "LOADB", "STORE", "STOREB", "JUMP", "JUMPT", "JUMPF", "RETURN", "NOT", "CODE", "DATA", "FUNCTION", "END", "DW", "DL", "DS", "DB", "STRING", "INTEGER", "LABEL", "COLON", "ASSIGN", "ADD", "SUB", "MUL", "DIV", "LT", "LE", "EQ", "LPAREN", "RPAREN", "VR", "VI", "UNDERSLASH", "DOT", "LETTER", "DIGIT", "ALPHANUMERIC", "UNSIGNED_INTEGER", "WS", "NEWLINE", "COMMENT", "','", "'['", "']'"
    };
    public static final int FUNCTION=16;
    public static final int VR=36;
    public static final int LT=31;
    public static final int UNDERSLASH=38;
    public static final int STOREB=8;
    public static final int LETTER=40;
    public static final int DW=18;
    public static final int VI=37;
    public static final int DL=19;
    public static final int SUB=28;
    public static final int NOT=13;
    public static final int DS=20;
    public static final int JUMPT=10;
    public static final int EOF=-1;
    public static final int LPAREN=34;
    public static final int CODE=14;
    public static final int RPAREN=35;
    public static final int UNSIGNED_INTEGER=43;
    public static final int JUMPF=11;
    public static final int ALPHANUMERIC=42;
    public static final int RETURN=12;
    public static final int DIGIT=41;
    public static final int EQ=33;
    public static final int COMMENT=46;
    public static final int DOT=39;
    public static final int STORE=7;
    public static final int JUMP=9;
    public static final int ADD=27;
    public static final int INTEGER=23;
    public static final int T__47=47;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int LOAD=5;
    public static final int MUL=29;
    public static final int COLON=25;
    public static final int WS=44;
    public static final int NEWLINE=45;
    public static final int LABEL=24;
    public static final int DB=21;
    public static final int ASSIGN=26;
    public static final int CALL=4;
    public static final int DIV=30;
    public static final int END=17;
    public static final int LOADB=6;
    public static final int DATA=15;
    public static final int LE=32;
    public static final int STRING=22;

    // delegates
    // delegators


        public CoolIrParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public CoolIrParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return CoolIrParser.tokenNames; }
    public String getGrammarFileName() { return "src/ro/pub/cpl/coolir/CoolIr.g"; }





    // $ANTLR start "program"
    // src/ro/pub/cpl/coolir/CoolIr.g:37:1: program returns [Program result] : cs= codeSection ds= dataSection ;
    public final Program program() throws RecognitionException {
        Program result = null;

        List<Method> cs = null;

        List<DataDirective> ds = null;


        try {
            // src/ro/pub/cpl/coolir/CoolIr.g:38:5: (cs= codeSection ds= dataSection )
            // src/ro/pub/cpl/coolir/CoolIr.g:38:9: cs= codeSection ds= dataSection
            {
            pushFollow(FOLLOW_codeSection_in_program626);
            cs=codeSection();

            state._fsp--;

            pushFollow(FOLLOW_dataSection_in_program632);
            ds=dataSection();

            state._fsp--;


                    result = new Program(cs, ds);
                

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return result;
    }
    // $ANTLR end "program"


    // $ANTLR start "codeSection"
    // src/ro/pub/cpl/coolir/CoolIr.g:43:1: codeSection returns [List<Method> result] : CODE (md= method )* ;
    public final List<Method> codeSection() throws RecognitionException {
        List<Method> result = null;

        Method md = null;



                result = new ArrayList<Method>();
            
        try {
            // src/ro/pub/cpl/coolir/CoolIr.g:47:5: ( CODE (md= method )* )
            // src/ro/pub/cpl/coolir/CoolIr.g:47:9: CODE (md= method )*
            {
            match(input,CODE,FOLLOW_CODE_in_codeSection666); 
            // src/ro/pub/cpl/coolir/CoolIr.g:47:14: (md= method )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==FUNCTION) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // src/ro/pub/cpl/coolir/CoolIr.g:47:15: md= method
            	    {
            	    pushFollow(FOLLOW_method_in_codeSection673);
            	    md=method();

            	    state._fsp--;

            	     result.add(md); 

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return result;
    }
    // $ANTLR end "codeSection"


    // $ANTLR start "method"
    // src/ro/pub/cpl/coolir/CoolIr.g:50:1: method returns [Method result] : FUNCTION fn= STRING ',' inCount= INTEGER ',' outCount= INTEGER il= instructionList END ;
    public final Method method() throws RecognitionException {
        Method result = null;

        Token fn=null;
        Token inCount=null;
        Token outCount=null;
        List<Instruction> il = null;


        try {
            // src/ro/pub/cpl/coolir/CoolIr.g:51:5: ( FUNCTION fn= STRING ',' inCount= INTEGER ',' outCount= INTEGER il= instructionList END )
            // src/ro/pub/cpl/coolir/CoolIr.g:51:9: FUNCTION fn= STRING ',' inCount= INTEGER ',' outCount= INTEGER il= instructionList END
            {
            match(input,FUNCTION,FOLLOW_FUNCTION_in_method700); 
            fn=(Token)match(input,STRING,FOLLOW_STRING_in_method706); 
            match(input,47,FOLLOW_47_in_method708); 
            inCount=(Token)match(input,INTEGER,FOLLOW_INTEGER_in_method714); 
            match(input,47,FOLLOW_47_in_method716); 
            outCount=(Token)match(input,INTEGER,FOLLOW_INTEGER_in_method722); 
            pushFollow(FOLLOW_instructionList_in_method728);
            il=instructionList();

            state._fsp--;

            match(input,END,FOLLOW_END_in_method730); 

                    result = new Method(fn.getText().substring(1, fn.getText().length()-1), 
                    	Integer.parseInt(inCount.getText()), 
                    	Integer.parseInt(outCount.getText()), 
                    	il);
                

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return result;
    }
    // $ANTLR end "method"


    // $ANTLR start "instructionList"
    // src/ro/pub/cpl/coolir/CoolIr.g:59:1: instructionList returns [List<Instruction> result] : (i= instruction )* ;
    public final List<Instruction> instructionList() throws RecognitionException {
        List<Instruction> result = null;

        Instruction i = null;



                result = new ArrayList<Instruction>();
            
        try {
            // src/ro/pub/cpl/coolir/CoolIr.g:63:5: ( (i= instruction )* )
            // src/ro/pub/cpl/coolir/CoolIr.g:63:9: (i= instruction )*
            {
            // src/ro/pub/cpl/coolir/CoolIr.g:63:9: (i= instruction )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( ((LA2_0>=CALL && LA2_0<=RETURN)||LA2_0==LABEL||LA2_0==LPAREN||LA2_0==VR) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // src/ro/pub/cpl/coolir/CoolIr.g:63:10: i= instruction
            	    {
            	    pushFollow(FOLLOW_instruction_in_instructionList770);
            	    i=instruction();

            	    state._fsp--;

            	     result.add(i); 

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return result;
    }
    // $ANTLR end "instructionList"


    // $ANTLR start "instruction"
    // src/ro/pub/cpl/coolir/CoolIr.g:66:1: instruction returns [Instruction result] : (rl= LABEL COLON )* (cpi= copyInstruction | ai= arithmeticalInstruction | li= logicalInstruction | ci= callInstruction | ji= jumpInstruction | ri= returnInstruction | mi= memoryInstruction ) ;
    public final Instruction instruction() throws RecognitionException {
        Instruction result = null;

        Token rl=null;
        CopyInstruction cpi = null;

        ArithmeticalInstruction ai = null;

        LogicalInstruction li = null;

        CallInstruction ci = null;

        Instruction ji = null;

        Instruction ri = null;

        MemoryInstruction mi = null;



                List<String> labels = new ArrayList<String>();
            
        try {
            // src/ro/pub/cpl/coolir/CoolIr.g:73:5: ( (rl= LABEL COLON )* (cpi= copyInstruction | ai= arithmeticalInstruction | li= logicalInstruction | ci= callInstruction | ji= jumpInstruction | ri= returnInstruction | mi= memoryInstruction ) )
            // src/ro/pub/cpl/coolir/CoolIr.g:73:9: (rl= LABEL COLON )* (cpi= copyInstruction | ai= arithmeticalInstruction | li= logicalInstruction | ci= callInstruction | ji= jumpInstruction | ri= returnInstruction | mi= memoryInstruction )
            {
            // src/ro/pub/cpl/coolir/CoolIr.g:73:9: (rl= LABEL COLON )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==LABEL) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // src/ro/pub/cpl/coolir/CoolIr.g:73:13: rl= LABEL COLON
            	    {
            	    rl=(Token)match(input,LABEL,FOLLOW_LABEL_in_instruction823); 
            	    match(input,COLON,FOLLOW_COLON_in_instruction825); 
            	     labels.add(rl.getText()); 

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            // src/ro/pub/cpl/coolir/CoolIr.g:74:9: (cpi= copyInstruction | ai= arithmeticalInstruction | li= logicalInstruction | ci= callInstruction | ji= jumpInstruction | ri= returnInstruction | mi= memoryInstruction )
            int alt4=7;
            alt4 = dfa4.predict(input);
            switch (alt4) {
                case 1 :
                    // src/ro/pub/cpl/coolir/CoolIr.g:74:13: cpi= copyInstruction
                    {
                    pushFollow(FOLLOW_copyInstruction_in_instruction847);
                    cpi=copyInstruction();

                    state._fsp--;

                     result = cpi; 

                    }
                    break;
                case 2 :
                    // src/ro/pub/cpl/coolir/CoolIr.g:75:13: ai= arithmeticalInstruction
                    {
                    pushFollow(FOLLOW_arithmeticalInstruction_in_instruction867);
                    ai=arithmeticalInstruction();

                    state._fsp--;

                     result = ai; 

                    }
                    break;
                case 3 :
                    // src/ro/pub/cpl/coolir/CoolIr.g:76:13: li= logicalInstruction
                    {
                    pushFollow(FOLLOW_logicalInstruction_in_instruction887);
                    li=logicalInstruction();

                    state._fsp--;

                     result = li; 

                    }
                    break;
                case 4 :
                    // src/ro/pub/cpl/coolir/CoolIr.g:77:13: ci= callInstruction
                    {
                    pushFollow(FOLLOW_callInstruction_in_instruction907);
                    ci=callInstruction();

                    state._fsp--;

                     result = ci; 

                    }
                    break;
                case 5 :
                    // src/ro/pub/cpl/coolir/CoolIr.g:78:13: ji= jumpInstruction
                    {
                    pushFollow(FOLLOW_jumpInstruction_in_instruction927);
                    ji=jumpInstruction();

                    state._fsp--;

                     result = ji; 

                    }
                    break;
                case 6 :
                    // src/ro/pub/cpl/coolir/CoolIr.g:79:7: ri= returnInstruction
                    {
                    pushFollow(FOLLOW_returnInstruction_in_instruction941);
                    ri=returnInstruction();

                    state._fsp--;

                     result = ri; 

                    }
                    break;
                case 7 :
                    // src/ro/pub/cpl/coolir/CoolIr.g:80:13: mi= memoryInstruction
                    {
                    pushFollow(FOLLOW_memoryInstruction_in_instruction961);
                    mi=memoryInstruction();

                    state._fsp--;

                     result = mi; 

                    }
                    break;

            }


            }


                    result.setLabels(labels);
                
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return result;
    }
    // $ANTLR end "instruction"


    // $ANTLR start "copyInstruction"
    // src/ro/pub/cpl/coolir/CoolIr.g:84:1: copyInstruction returns [CopyInstruction result] : (rg= register ASSIGN op= operand | rg= register ASSIGN irg= inRegister | rg= register ASSIGN rl= LABEL );
    public final CopyInstruction copyInstruction() throws RecognitionException {
        CopyInstruction result = null;

        Token rl=null;
        Register rg = null;

        Operand op = null;

        InRegister irg = null;


        try {
            // src/ro/pub/cpl/coolir/CoolIr.g:85:5: (rg= register ASSIGN op= operand | rg= register ASSIGN irg= inRegister | rg= register ASSIGN rl= LABEL )
            int alt5=3;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==VR) ) {
                int LA5_1 = input.LA(2);

                if ( (LA5_1==ASSIGN) ) {
                    switch ( input.LA(3) ) {
                    case LABEL:
                        {
                        alt5=3;
                        }
                        break;
                    case VI:
                        {
                        alt5=2;
                        }
                        break;
                    case INTEGER:
                    case VR:
                        {
                        alt5=1;
                        }
                        break;
                    default:
                        NoViableAltException nvae =
                            new NoViableAltException("", 5, 2, input);

                        throw nvae;
                    }

                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 5, 1, input);

                    throw nvae;
                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
            }
            switch (alt5) {
                case 1 :
                    // src/ro/pub/cpl/coolir/CoolIr.g:85:9: rg= register ASSIGN op= operand
                    {
                    pushFollow(FOLLOW_register_in_copyInstruction1000);
                    rg=register();

                    state._fsp--;

                    match(input,ASSIGN,FOLLOW_ASSIGN_in_copyInstruction1002); 
                    pushFollow(FOLLOW_operand_in_copyInstruction1008);
                    op=operand();

                    state._fsp--;


                            result = new CopyInstruction(rg, op);
                        

                    }
                    break;
                case 2 :
                    // src/ro/pub/cpl/coolir/CoolIr.g:88:9: rg= register ASSIGN irg= inRegister
                    {
                    pushFollow(FOLLOW_register_in_copyInstruction1024);
                    rg=register();

                    state._fsp--;

                    match(input,ASSIGN,FOLLOW_ASSIGN_in_copyInstruction1026); 
                    pushFollow(FOLLOW_inRegister_in_copyInstruction1032);
                    irg=inRegister();

                    state._fsp--;


                            result = new CopyInstruction(rg, irg);
                        

                    }
                    break;
                case 3 :
                    // src/ro/pub/cpl/coolir/CoolIr.g:91:9: rg= register ASSIGN rl= LABEL
                    {
                    pushFollow(FOLLOW_register_in_copyInstruction1048);
                    rg=register();

                    state._fsp--;

                    match(input,ASSIGN,FOLLOW_ASSIGN_in_copyInstruction1050); 
                    rl=(Token)match(input,LABEL,FOLLOW_LABEL_in_copyInstruction1056); 

                        	result = new CopyInstruction(rg, rl.getText());
                        

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return result;
    }
    // $ANTLR end "copyInstruction"


    // $ANTLR start "arithmeticalInstruction"
    // src/ro/pub/cpl/coolir/CoolIr.g:96:1: arithmeticalInstruction returns [ArithmeticalInstruction result] : (rg= register ASSIGN lop= operand ADD rop= operand | rg= register ASSIGN lop= operand SUB rop= operand | rg= register ASSIGN lop= operand MUL rop= operand | rg= register ASSIGN lop= operand DIV rop= operand );
    public final ArithmeticalInstruction arithmeticalInstruction() throws RecognitionException {
        ArithmeticalInstruction result = null;

        Register rg = null;

        Operand lop = null;

        Operand rop = null;


        try {
            // src/ro/pub/cpl/coolir/CoolIr.g:97:5: (rg= register ASSIGN lop= operand ADD rop= operand | rg= register ASSIGN lop= operand SUB rop= operand | rg= register ASSIGN lop= operand MUL rop= operand | rg= register ASSIGN lop= operand DIV rop= operand )
            int alt6=4;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==VR) ) {
                int LA6_1 = input.LA(2);

                if ( (LA6_1==ASSIGN) ) {
                    int LA6_2 = input.LA(3);

                    if ( (LA6_2==INTEGER) ) {
                        switch ( input.LA(4) ) {
                        case ADD:
                            {
                            alt6=1;
                            }
                            break;
                        case SUB:
                            {
                            alt6=2;
                            }
                            break;
                        case MUL:
                            {
                            alt6=3;
                            }
                            break;
                        case DIV:
                            {
                            alt6=4;
                            }
                            break;
                        default:
                            NoViableAltException nvae =
                                new NoViableAltException("", 6, 3, input);

                            throw nvae;
                        }

                    }
                    else if ( (LA6_2==VR) ) {
                        switch ( input.LA(4) ) {
                        case ADD:
                            {
                            alt6=1;
                            }
                            break;
                        case SUB:
                            {
                            alt6=2;
                            }
                            break;
                        case MUL:
                            {
                            alt6=3;
                            }
                            break;
                        case DIV:
                            {
                            alt6=4;
                            }
                            break;
                        default:
                            NoViableAltException nvae =
                                new NoViableAltException("", 6, 4, input);

                            throw nvae;
                        }

                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 6, 2, input);

                        throw nvae;
                    }
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 6, 1, input);

                    throw nvae;
                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;
            }
            switch (alt6) {
                case 1 :
                    // src/ro/pub/cpl/coolir/CoolIr.g:97:9: rg= register ASSIGN lop= operand ADD rop= operand
                    {
                    pushFollow(FOLLOW_register_in_arithmeticalInstruction1085);
                    rg=register();

                    state._fsp--;

                    match(input,ASSIGN,FOLLOW_ASSIGN_in_arithmeticalInstruction1087); 
                    pushFollow(FOLLOW_operand_in_arithmeticalInstruction1093);
                    lop=operand();

                    state._fsp--;

                    match(input,ADD,FOLLOW_ADD_in_arithmeticalInstruction1095); 
                    pushFollow(FOLLOW_operand_in_arithmeticalInstruction1101);
                    rop=operand();

                    state._fsp--;


                            result = new ArithmeticalInstruction(
                                    ArithmeticalInstruction.OPERATION.ADD, rg,
                                    lop, rop);
                        

                    }
                    break;
                case 2 :
                    // src/ro/pub/cpl/coolir/CoolIr.g:102:9: rg= register ASSIGN lop= operand SUB rop= operand
                    {
                    pushFollow(FOLLOW_register_in_arithmeticalInstruction1117);
                    rg=register();

                    state._fsp--;

                    match(input,ASSIGN,FOLLOW_ASSIGN_in_arithmeticalInstruction1119); 
                    pushFollow(FOLLOW_operand_in_arithmeticalInstruction1125);
                    lop=operand();

                    state._fsp--;

                    match(input,SUB,FOLLOW_SUB_in_arithmeticalInstruction1127); 
                    pushFollow(FOLLOW_operand_in_arithmeticalInstruction1133);
                    rop=operand();

                    state._fsp--;


                            result = new ArithmeticalInstruction(
                                    ArithmeticalInstruction.OPERATION.SUB, rg,
                                    lop, rop);
                        

                    }
                    break;
                case 3 :
                    // src/ro/pub/cpl/coolir/CoolIr.g:107:9: rg= register ASSIGN lop= operand MUL rop= operand
                    {
                    pushFollow(FOLLOW_register_in_arithmeticalInstruction1149);
                    rg=register();

                    state._fsp--;

                    match(input,ASSIGN,FOLLOW_ASSIGN_in_arithmeticalInstruction1151); 
                    pushFollow(FOLLOW_operand_in_arithmeticalInstruction1157);
                    lop=operand();

                    state._fsp--;

                    match(input,MUL,FOLLOW_MUL_in_arithmeticalInstruction1159); 
                    pushFollow(FOLLOW_operand_in_arithmeticalInstruction1165);
                    rop=operand();

                    state._fsp--;


                            result = new ArithmeticalInstruction(
                                    ArithmeticalInstruction.OPERATION.MUL, rg,
                                    lop, rop);
                        

                    }
                    break;
                case 4 :
                    // src/ro/pub/cpl/coolir/CoolIr.g:112:9: rg= register ASSIGN lop= operand DIV rop= operand
                    {
                    pushFollow(FOLLOW_register_in_arithmeticalInstruction1181);
                    rg=register();

                    state._fsp--;

                    match(input,ASSIGN,FOLLOW_ASSIGN_in_arithmeticalInstruction1183); 
                    pushFollow(FOLLOW_operand_in_arithmeticalInstruction1189);
                    lop=operand();

                    state._fsp--;

                    match(input,DIV,FOLLOW_DIV_in_arithmeticalInstruction1191); 
                    pushFollow(FOLLOW_operand_in_arithmeticalInstruction1197);
                    rop=operand();

                    state._fsp--;


                            result = new ArithmeticalInstruction(
                                    ArithmeticalInstruction.OPERATION.DIV, rg,
                                    lop, rop);
                        

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return result;
    }
    // $ANTLR end "arithmeticalInstruction"


    // $ANTLR start "logicalInstruction"
    // src/ro/pub/cpl/coolir/CoolIr.g:119:1: logicalInstruction returns [LogicalInstruction result] : (rg= register ASSIGN NOT op= operand | rg= register ASSIGN lop= operand LT rop= operand | rg= register ASSIGN lop= operand LE rop= operand | rg= register ASSIGN lop= operand EQ rop= operand );
    public final LogicalInstruction logicalInstruction() throws RecognitionException {
        LogicalInstruction result = null;

        Register rg = null;

        Operand op = null;

        Operand lop = null;

        Operand rop = null;


        try {
            // src/ro/pub/cpl/coolir/CoolIr.g:120:5: (rg= register ASSIGN NOT op= operand | rg= register ASSIGN lop= operand LT rop= operand | rg= register ASSIGN lop= operand LE rop= operand | rg= register ASSIGN lop= operand EQ rop= operand )
            int alt7=4;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==VR) ) {
                int LA7_1 = input.LA(2);

                if ( (LA7_1==ASSIGN) ) {
                    switch ( input.LA(3) ) {
                    case NOT:
                        {
                        alt7=1;
                        }
                        break;
                    case INTEGER:
                        {
                        switch ( input.LA(4) ) {
                        case LT:
                            {
                            alt7=2;
                            }
                            break;
                        case EQ:
                            {
                            alt7=4;
                            }
                            break;
                        case LE:
                            {
                            alt7=3;
                            }
                            break;
                        default:
                            NoViableAltException nvae =
                                new NoViableAltException("", 7, 4, input);

                            throw nvae;
                        }

                        }
                        break;
                    case VR:
                        {
                        switch ( input.LA(4) ) {
                        case LT:
                            {
                            alt7=2;
                            }
                            break;
                        case EQ:
                            {
                            alt7=4;
                            }
                            break;
                        case LE:
                            {
                            alt7=3;
                            }
                            break;
                        default:
                            NoViableAltException nvae =
                                new NoViableAltException("", 7, 5, input);

                            throw nvae;
                        }
